# ackermann_car

./: README.md
ackermann_car/: CMakeLists.txt  package.xml
ackermann_car/config/: parameters.yaml  ros_gz_bridge.yaml
ackermann_car/launch/: vehicle.launch.py
ackermann_car/logs/: path.csv  trajectory.csv
ackermann_car/model/: vehicle.xacro
ackermann_car/odom_node/: CMakeLists.txt
ackermann_car/odom_node/include/: odom_node.hpp
ackermann_car/odom_node/src/: odom_node.cpp
ackermann_car/path_follower/: CMakeLists.txt
ackermann_car/path_follower/include/: path_follower.hpp  pure_pursuit.hpp
ackermann_car/path_follower/src/: path_follower.cpp  pure_pursuit.cpp
ackermann_car/vehicle_controller/: CMakeLists.txt
ackermann_car/vehicle_controller/include/: vehicle_controller.hpp
car_interfaces/: CMakeLists.txt  package.xml
car_interfaces/action/: FollowPath.action
